--- a/Final/FinalQuestion2.ipynb
+++ b/Final/FinalQuestion2.ipynb
@@ -1,53 +1,142 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'penalty' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-7484d6c2b536>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m text_clf = Pipeline([('Count', CountVectorizer()),\n\u001b[0;32m     12\u001b[0m                      \u001b[1;33m(\u001b[0m\u001b[1;34m'tfidf'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTfidfTransformer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m                      ('clf', SGDClassifier(loss='hinge'), penalty == 'l2', alpha==1e-3,random_state==42)])\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mtext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtwenty_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtwenty_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtarget\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'penalty' is not defined"
-     ]
-    }
-   ],
    "source": [
-    "import numpy as np\n",
+    "# Question 2\n",
+    "The following contains 5 errors, find and correct them all and answer the questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.datasets import fetch_20newsgroups\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer\n",
     "from sklearn.linear_model import SGDClassifier\n",
     "\n",
     "categories = ['rec.sport.baseball', 'rec.sport.hockey']\n",
-    "twenty_train = fetch_20newsgroups(subset='test', categories = categories)\n",
-    "twenty_test = fetch_20newsgroups(subset='train', categories = categories, shuffle = True, random_state =42)\n",
+    "twenty_train = fetch_20newsgroups(subset='train', categories = categories)\n",
+    "twenty_test = fetch_20newsgroups(subset='test', categories = categories, shuffle = True, random_state =42)\n",
     "\n",
-    "text_clf = Pipeline([('Count', CountVectorizer()),\n",
+    "text_clf = Pipeline([('vect', CountVectorizer()),\n",
     "                     ('tfidf', TfidfTransformer()),\n",
-    "                     ('clf', SGDClassifier(loss='hinge'), penalty == 'l2', alpha==1e-3,random_state==42)])\n",
+    "                     ('clf', SGDClassifier(loss='hinge', penalty= 'l2', \n",
+    "                                           alpha=1e-3,random_state=42)),])\n",
     "\n",
-    "text.clf.fit(twenty_train.data, twenty_train.target)\n",
+    "text_clf.fit(twenty_train.data, twenty_train.target)\n",
     "predicted = text_clf.predict(twenty_test.data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1197\n"
+     ]
+    }
+   ],
+   "source": [
+    "#How many observations in the training dataset\n",
+    "print(len(twenty_train.data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#How many features in the training dataset\n",
+    "import pandas\n",
+    "features=pandas.DataFrame(twenty_train.data)\n",
+    "print(len(features.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#How well did the model performerd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>rec.sport.baseball</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>rec.sport.hockey</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    0\n",
+       "0  rec.sport.baseball\n",
+       "1    rec.sport.hockey"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Categories\n",
+    "pandas.DataFrame(twenty_test.target_names)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 1\n",
-    "There are 2 observations in the datset: baseball and hockey extraction information\n",
-    "\n",
-    "Question 2\n",
-    "There are 2 features in the dataset: test and train\n",
-    "\n",
-    "Question 3\n"
+    "baseball is category 0 and hockey gategory 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
