--- a/Final/FinalQuestion1.ipynb
+++ b/Final/FinalQuestion1.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Caroline Wilson\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Question1\n",
     "Task is to classify data from a cancer diagnostic database"
    ]
