--- a/Final/FinalQuestion2.ipynb
+++ b/Final/FinalQuestion2.ipynb
@@ -15,20 +15,20 @@
    "outputs": [],
    "source": [
     "from sklearn.datasets import fetch_20newsgroups\n",
-    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.pipeline import Pipeline        # Error\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer\n",
     "from sklearn.linear_model import SGDClassifier\n",
     "\n",
     "categories = ['rec.sport.baseball', 'rec.sport.hockey']\n",
-    "twenty_train = fetch_20newsgroups(subset='train', categories = categories)\n",
-    "twenty_test = fetch_20newsgroups(subset='test', categories = categories, shuffle = True, random_state =42)\n",
+    "twenty_train = fetch_20newsgroups(subset='train', categories = categories)   # Error\n",
+    "twenty_test = fetch_20newsgroups(subset='test', categories = categories, shuffle = True, random_state =42)  #Error\n",
     "\n",
-    "text_clf = Pipeline([('vect', CountVectorizer()),\n",
+    "text_clf = Pipeline([('vect', CountVectorizer()),  # Error\n",
     "                     ('tfidf', TfidfTransformer()),\n",
     "                     ('clf', SGDClassifier(loss='hinge', penalty= 'l2', \n",
     "                                           alpha=1e-3,random_state=42)),])\n",
     "\n",
-    "text_clf.fit(twenty_train.data, twenty_train.target)\n",
+    "text_clf.fit(twenty_train.data, twenty_train.target)   # Error\n",
     "predicted = text_clf.predict(twenty_test.data)\n"
    ]
   },
@@ -48,6 +48,13 @@
    "source": [
     "#How many observations in the training dataset\n",
     "print(len(twenty_train.data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 1197 observations in the training dataset"
    ]
   },
   {
@@ -71,8 +78,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is 1 feature in the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
